# caf_simple_tracing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO_LIST.txt  build.sh  format.sh  run_node_a.sh  run_node_b.sh
lib/: CMakeLists.txt
lib/include/: log.hpp  test_actor_buddy_function.hpp  test_actor_function.hpp  test_profiler.hpp  test_tracing_data.hpp  test_tracing_data_factory.hpp
lib/src/: log.cpp  test_actor_buddy_function.cpp  test_actor_function.cpp  test_profiler.cpp  test_tracing_data.cpp  test_tracing_data_factory.cpp
node_a/: CMakeLists.txt
node_a/src/: main.cpp
node_b/: CMakeLists.txt
node_b/src/: main.cpp
